[package]
name = "which-tweet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.22.1"
clap = {version = "4.0.29", features = ["derive"]}
colored = "2.0.0"
dotenv = "0.15.0"
env_file = "0.1.3"
futures = "0.3.25"
prettytable-rs = "0.9.0"
question = "0.2.2"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "native-tls-crate", "default-tls", "hyper-tls", "__tls"] }
serde_json = "1.0.89"
